--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-responsive-carousel": "^3.1.30",
-    "react-swipeable-views": "^0.12.12",
     "json-server": "^0.12.1",
     "material-ui": "^0.20.0",
+    "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-responsive-carousel": "^3.1.30",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-swipeable-views": "^0.12.12"
   },
   "scripts": {
     "start": "react-scripts start",
